[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "easyid-python"
version = "1.0.2"
description = "Official Python SDK for the EasyID identity verification API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "EasyID Team" }
]
keywords = ["easyid", "identity", "verification", "kyc", "risk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "requests>=2.31.0,<3"
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9"
]

[project.urls]
Homepage = "https://github.com/easyid-com-cn/easyid-python"
Repository = "https://github.com/easyid-com-cn/easyid-python"
Documentation = "https://www.easyid.com.cn"

[tool.hatch.build.targets.wheel]
packages = ["src/easyid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
